# compile_zoom_image

./: LICENSE  README.md  main.py  pyproject.toml  run.py  utils.py
tasks/: __init__.py  base.py  tasks.py
tasks/utils/: crop_window.py  detect_face.py  make_group_img.py
templates/: end.html  home.html
