[tool.poetry]
name = "compile_zoom_image"
version = "0.1.0"
description = ""
authors = ["must-11 <masato.0422.h@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
numpy = "^1.19.2"
opencv-contrib-python = "^4.5.1"
tensorflow = "^2.4.1"
tf-bodypix = {extras = ["all"], version = "^0.3.5"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
